{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 9,
  "lineage": "e3443d63-ee42-3d99-d60d-3750d19e71e1",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767398025409:subnet/subnet-08a95a77a208359c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Tier",
                "values": [
                  "public"
                ]
              }
            ],
            "id": "subnet-08a95a77a208359c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398025409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Tier": "public"
            },
            "vpc_id": "vpc-0dec0ff1101436095"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lcf_lab_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017d8144c10ddee8b",
            "arn": "arn:aws:ec2:eu-west-1:767398025409:instance/i-0306c6476e889e625",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0306c6476e889e625",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d9abe235bdc582a",
            "private_dns": "ip-172-31-40-9.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.9",
            "public_dns": "ec2-34-244-177-201.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.177.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "DeployedBy": "terraform",
                  "GitPath": ":module-2-provisioning",
                  "Module": "devops-essentials",
                  "Name": "module-2-provisioning",
                  "Owner": "Cheikh gueye"
                },
                "tags_all": {
                  "DeployedBy": "terraform",
                  "GitPath": ":module-2-provisioning",
                  "Module": "devops-essentials",
                  "Name": "module-2-provisioning",
                  "Owner": "Cheikh gueye"
                },
                "throughput": 125,
                "volume_id": "vol-0bbf8c3eb2ea6840a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-web",
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a95a77a208359c2",
            "tags": {
              "DeployedBy": "terraform",
              "GitPath": ":module-2-provisioning",
              "Module": "devops-essentials",
              "Name": "aws_instance_for_nginx",
              "Owner": "Cheikh gueye"
            },
            "tags_all": {
              "DeployedBy": "terraform",
              "GitPath": ":module-2-provisioning",
              "Module": "devops-essentials",
              "Name": "aws_instance_for_nginx",
              "Owner": "Cheikh gueye"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098c74f2829f977fb",
              "sg-0dc9e8dfa932b826c"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767398025409:security-group/sg-098c74f2829f977fb",
            "description": "Autorise le trafic HTTP et HTTPS pour Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c74f2829f977fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-web",
            "name_prefix": "",
            "owner_id": "767398025409",
            "revoke_rules_on_delete": false,
            "tags": {
              "DeployedBy": "terraform",
              "GitPath": ":module-2-provisioning",
              "Module": "devops-essentials",
              "Name": "Nginx Web Traffic",
              "Owner": "Cheikh gueye"
            },
            "tags_all": {
              "DeployedBy": "terraform",
              "GitPath": ":module-2-provisioning",
              "Module": "devops-essentials",
              "Name": "Nginx Web Traffic",
              "Owner": "Cheikh gueye"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dec0ff1101436095"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:767398025409:security-group/sg-0dc9e8dfa932b826c",
            "description": "Autorise les connexions SSH entrantes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc9e8dfa932b826c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access",
            "name_prefix": "",
            "owner_id": "767398025409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Access"
            },
            "tags_all": {
              "DeployedBy": "terraform",
              "GitPath": ":module-2-provisioning",
              "Module": "devops-essentials",
              "Name": "SSH Access",
              "Owner": "Cheikh gueye"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dec0ff1101436095"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}